# SIH

ML/: .gitignore  data.py  data2.py  db.sqlite3  pyproject.toml  recommendation.json  requirements.txt
ML/ML/: settings.py  urls.py
ML/chat_pdf/: apps.py  urls.py  views.py
ML/halloffame/: urls.py  views.py
ML/meme_generator/: meme_generator.py  views.py
ML/post_analysis/: services.py  urls.py  views.py
ML/recommendation/: recommendation_engines.py  urls.py  views.py
ML/recommendation_post/: apps.py  urls.py  views.py
ML/resume_autofill/: apps.py  urls.py  views.py
ML/rewriteAI/: apps.py  template.py  urls.py  views.py
ML/spam/: views.py
ML/texttosql/: urls.py  views.py
client/: .env.example  .gitignore  App.jsx  app.json  package.json  tailwind.config.js
client/app/: _layout.jsx  index.js  index.jsx
client/components/: CustomAlertModal.jsx  CustomHeader.jsx  JobCard.jsx  JobDetailsModal.jsx  KeyboardDismissWrapper.jsx  LoadingComponent.jsx  Post.jsx
client/constants/: alumniData.js  chatData.js  donationData.js  eventData.js  jobData.js  messageData.js  profileData.js
client/i18n/: i18n.js
client/lib/: utils.js
client/navigation/: AppNavigator.js  AuthNavigator.js  DrawerNavigator.js  TabNavigator.js
client/navigators/: DrawerNavigator.jsx  TabNavigator.jsx
client/pages/: LandingPage.jsx
client/providers/: AuthProvider.jsx  CustomProvider.jsx  SocketProvider.jsx
client/screens/: About.jsx  All.jsx  AlumniDirectory.jsx  Call.jsx  Chat.jsx  CommunityChat.jsx  ConfirmRegistration.jsx  (+24 more)
server/: .prettierrc  package.json  server.js
(+108 files in other folders)
