[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["javascript <ntpjc2vinayak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.9"
pdfplumber = "^0.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
